fixed list alignment

--- a/public/styles2.css
+++ b/public/styles2.css
@@ -437,7 +437,7 @@ h1, h2, h3, h4, h5, h6 {
     position: relative;
 }
 
-.about li {
+.about ol {
     text-align: left;
 }
 
